--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
+    "dompurify": "^3.2.4",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "radix-icons": "^1.0.0",
