--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dompurify": "^3.2.4",
     "framer-motion": "^12.4.7",
+    "git-filter-repo": "^0.0.30",
     "lucide-react": "^0.475.0",
     "radix-icons": "^1.0.0",
     "react": "^19.0.0",
