--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
   "dependencies": {
     "@google/generative-ai": "^0.22.0",
     "@radix-ui/react-icons": "^1.3.2",
+    "@react-three/drei": "^10.0.3",
+    "@react-three/fiber": "^9.0.4",
     "axios": "^1.8.1",
     "cors": "^2.8.5",
     "dompurify": "^3.2.4",
     "framer-motion": "^12.4.7",
     "git-filter-repo": "^0.0.30",
     "lucide-react": "^0.475.0",
+    "pixi.js": "^8.8.1",
     "radix-icons": "^1.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.3",
     "styled-components": "^6.1.15",
+    "three": "^0.174.0",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
