🧱 ci: Modificação no manifestjson

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,22 +8,22 @@
   "description": "Aeris-Smart é seu assistente educacional e terapêutico, ajudando você com dúvidas e apoio emocional.",
   "icons": [
     {
-      "src": "/assets/Aeris.png",
+      "src": "/Aeris.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/assets/Aeris.png",
+      "src": "/Aeris.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "/assets/Aeris.png",
+      "src": "/Aeris.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "/assets/Aeris.png",
+      "src": "/Aeris.png",
       "sizes": "256x256",
       "type": "image/png"
     }
